crates/cli/tests/integration/snapshots/integration__snapshot_tests__markdown_circular_deps_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: output
---
## Fallow: 1 issue found

### Circular dependencies (1)

- `src/a.ts` → `src/b.ts` → `src/a.ts`
